# winlator-mod

./: .gitignore  606.patch  Gst-bcc.sh  MangoHud-bcc.sh  README.md  arch-bootstrap.sh  build-mangohud-rootfs.sh  build-mangohud.yml  build-rootfs.sh  build-rootfs2.sh  mangohud-ctr.yml  mount.sh  tzdata-2025b-1-aarch64.pkg.tar.xz
.github/workflows/: build-apk-test.yml  build-box64.yml  build-gst.yml  build-mangohud.yml  build-mesa-winlator.yml  build-mesa.yml  build-mesa2.yml  build-wine-proton精简.yml  build-wine-ttt.yml  build-wine-w.yml  build-wine-winl.yml  build-wine-winlator.yml  wine-wow64-no.yml  winlator-gst-mangohud.yml  winlator-gst.yml
10.0/box64/: box0.2.7.1.tzst  box64-0.2.9.tzst  box64-0.4.1.1.tzst  index.txt
10.0/dxvk/: dxvk-1.10.9.99.tzst  dxvk-1.10.9.tzst  dxvk-2.6.0.2.tzst  index.txt
10.0/turnip/: index.txt  turnip-24.3.0.10.tzst  turnip-24.3.0.5.tzst  turnip-25.0.0.1.tzst  turnip-25.0.0.2.tzst  turnip-25.0.0.3.tzst  turnip-25.0.0.5.tzst  turnip-25.2.0.1.tzst  turnip-26.1.0.1.tzst  turnip-26.1.0.8.tzst  turnip-26.1.0.83.tzst
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: arm64ec-common_dlls.json  fex_env_vars.json  imagefs_patches.tzst  x86_64-common_dlls.json
app/src/main/assets/box64/: box64-0.3.8.tzst  default.box64rc
app/src/main/assets/graphics_driver/: gladio-1.0.tzst  turnip-25.2.0.tzst  turnip-25.3.0.tzst  turnip-26.1.0.tzst  (+3 more)
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/midihandler/: CMakeLists.txt
path/: A8x-GMU.patch  A8x-GPU-Support.patch  Adreno-840-GPU.patch  esync2-stdintfix.patch
(+209 files in other folders)
